# trade_lab

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  Gemfile  README.md  pyproject.toml
.claude/: settings.local.json
.streamlit/: config.toml
data/research/: macro_event_dates_2020_2026-04-06.csv
docs/: GAMMA_SCALPING.md  USING_GAMMA.md  WORKFLOW.md
notebooks/: IronCondor EV Calculations.ipynb  SPX Short-Term IV-RV Spread.ipynb  SPX-1DTE-Forecasting-Regime.ipynb
notebooks/data/: SPX_day_1980-01-01_2026-03-24.csv  VIX9D_day_2000-01-01_2026-03-24.csv  VIX_day_1980-01-01_2026-03-24.csv  baseline_v1_trades_02_13_2026.csv
qc/spxw_1dte/: IronCondorFinder.py  PositionRoller.py  VIXContango.py  main.py  research copy.ipynb  util.py
qc/spxw_1dte_baseline/: IronCondorFinder.py  event_dates.py  event_dates.yml  main.py
qc/spxw_7dte_baseline/: main.py
qc/spxw_7dte_exp02_close_high_dte/: main.py
qc/spxw_7dte_exp03_recenter_mid_dte/: main.py
qc/spxw_7dte_exp04_close_mid_dte/: main.py
qc/spxw_7dte_exp06_roll_late_am/: main.py
qc/spxw_7dte_exp07_recenter_late_am/: main.py
qc/spxw_7dte_exp08_close_late_midday/: main.py
qc/spxw_7dte_exp09_roll_late_midday/: IronCondorFinder.py  event_dates.py  main.py
qc/spxw_7dte_exp10_recenter_price_trigger/: main.py
qc/spxw_7dte_exp11_roll_high_dte/: IronCondorExitOrderManager.py  main.py
qc/spxw_7dte_hard_exit/: IronCondorRepairManager.py  main.py
qc/spxw_7dte_partial_close/: IronCondorEntryOrderManager.py  main.py
qc/spxw_7dte_rollout/: IronCondorRepairManager.py  main.py
research/: README.md
research/notebooks/: SPX-1DTE-Sharpe-Drawdown.ipynb  SPX_1DTE_Baseline_Analysis_v0.ipynb  SPX_1DTE_Baseline_Analysis_v1.ipynb
research_log/experiments/: e002.md  e003.md  e012.md  e014.md  e015.md
research_log/hypotheses/: h001.md  h002.md  h003.md  h004.md  h006.md  h012.md  h013.md  h015.md  h016.md
research_log/results/: spxw_7dte_exp04.json  (+1 more)
src/: __init__.py  config.py
src/charts/: Candles.py  (+14 more)
tests/: __init__.py  test_backtest_loader.py  test_dashboard.py  test_exit_analysis.py  test_market_context.py  test_performance_metrics.py  test_regime_detection.py  test_tail_analysis.py
(+30 files in other folders)
